--- a/index.html
+++ b/index.html
@@ -1,16 +1,17 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="style.css"/>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Vaibhav Gothwal</title>
 </head>
 <body>
+   
     <div class="main">
         <div class="upper-section"></div>
-        <div class="lower-section"></div>
         <div class="middle-section"></div>
+        <div class="lower-section"></div>
         <div class="side-bar"></div>
         <div class="left-layout"></div>
     </div>
