--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
    
     <div class="main">
         <div class="upper-section"></div>
-        <div class="middle-section"></div>
+        <div class="middle-section">SKILLS</div>
         <div class="lower-section"></div>
         <div class="side-bar"></div>
         <div class="left-layout"></div>
