--- a/index.html
+++ b/index.html
@@ -8,11 +8,11 @@
 </head>
 <body>
    
-    <div class="main">
+    <div class="main">VAIBHAV <br>GOTHWAL
         <div class="upper-section"></div>
         <div class="middle-section">SKILLS</div>
         <div class="lower-section"></div>
-        <div class="side-bar"></div>
+        <div class="side-bar">About Me</div>
         <div class="left-layout"></div>
     </div>
 </body>
