--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
         <div class="upper-section"></div>
         <div class="middle-section">SKILLS</div>
         <div class="lower-section"></div>
-        <div class="side-bar">About Me</div>
+        <div class="side-bar">About <br>me</div>
         <div class="left-layout"></div>
     </div>
 </body>
