--- a/index.html
+++ b/index.html
@@ -13,7 +13,13 @@
         <div class="middle-section">SKILLS</div>
         <div class="lower-section"></div>
         <div class="side-bar">About <br>me</div>
-        <div class="left-layout"></div>
+        <div class="left-layout">
+            <div class="outer-circle"></div>
+            <div class="inner-circle">
+                <img src="Images\ME(Cropped).jpg" class="photo" alt="Dinosaur" />
+            </div>
+            
+        </div>
     </div>
 </body>
 </html>
