--- a/index.html
+++ b/index.html
@@ -21,6 +21,9 @@
                 <div class="left-item1"></div>
             </div>
             <div class="inner-circle">
+                <div class="upper-card"></div>
+                <div class="middle-card"></div>
+                <div class="lower-card"></div>
                 <img src="Images\ME(Cropped).jpg" class="photo" alt="Dinosaur" />
                 <div class="inner-inner-circle"></div>
             </div>
